tests/typing/bad/testfile-undefined-5.go
package main

type T struct { x S }
func main() {}
